climate kml work

--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -7,7 +7,7 @@
 %
 % Site
 %
-radar_id       02                                              %radar id for climate analysis
+radar_id       28                                              %radar id for climate analysis
 transform_new  0                                               %flag to force transform regeneration
 %
 % Temporal
@@ -19,7 +19,7 @@ time_max       23:59                                           %oldest time in e
 month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers (vec)
 date_list_flag 0                                               %flag to use date_list (flag)
 date_list_var  target_days                                     %date_list variable name (str)
-rainyr_flag    1                                               %normalise by number of rain years (flag)
+rainyr_flag    0                                               %normalise by number of rain years (flag)
 rain_yr_start  6                                               %rain year starting month (month number)
 %
 % Spatial
@@ -39,7 +39,7 @@ ce_diff        8                                               %different betwee
 %
 % Paths
 %
-map_config_fn  map.melbourne.config
+map_config_fn  map.grafton.config
 db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root /run/media/meso/data/rwx_clim_archive/
 date_list_ffn  data/sb_data/arch_sb_days.mat                   %second date list to filter primary (must contain matlab dates rounded)
 out_root       /home/meso/rwx_climate/                         %output path for climate products
