climate kml work

--- a/rwx_climate/etc/map.grafton.config
+++ b/rwx_climate/etc/map.grafton.config
@@ -42,7 +42,7 @@ topo_linewidth          1
 topo_linecolor          [0.3,0.3,0.3]
 %
 draw_cities             1
-cities_names            {'Casino','Coffs.Harbour','Yamba','Tenterfield'}
+cities_names            {'Casino','Yamba','Coffs.Harbour','Tenterfield'}
 cities_lat              [-28.85,-29.44,-30.31,-29.05]
 cities_lon              [153.06,153.36,153.14,152.02]
 cities_horz_align       {'right','left','left','left'}
