kml climate layer finished

--- a/rwx_climate/etc/map.46.config
+++ b/rwx_climate/etc/map.46.config
@@ -10,10 +10,10 @@
 fig_w                   700
 fig_h                   700
 %
-map_N_lat               -28.7
-map_S_lat               -30.5
-map_E_lon               154.0
-map_W_lon               151.9
+map_N_lat               -34.44
+map_S_lat               -36.25
+map_E_lon               139.6
+map_W_lon               137.4
 %  
 lat_label_int           1
 lon_label_int           1
@@ -30,7 +30,7 @@ label_fontsize          10
 %
 draw_coast              1
 coast_ffn               /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
-state_id                1
+state_id                4
 %
 draw_topo               1
 topo_ffn                /run/media/meso/DATA/mapping/AUS_gtopo30
@@ -42,13 +42,13 @@ topo_linewidth          1
 topo_linecolor          [0.3,0.3,0.3]
 %
 draw_cities             1
-cities_names            {'Casino','Yamba','Coffs.Harbour','Tenterfield'}
-cities_lat              [-28.85,-29.44,-30.31,-29.05]
-cities_lon              [153.06,153.36,153.14,152.02]
-cities_horz_align       {'right','left','left','left'}
-cities_vert_align       {'top','top','top','top'}
-cities_fontsize         [10,10,10,10]
-cities_marksize         [3,3,3,3]
+cities_names            {'Adelaide','Murry.Bridge','Yorketown'}
+cities_lat              [-34.94,-35.13,-35.05]
+cities_lon              [138.61,139.28,137.61]
+cities_horz_align       {'left','left','left'}
+cities_vert_align       {'top','top','top'}
+cities_fontsize         [10,10,10]
+cities_marksize         [3,3,3]
 %
 draw_silence            1
 silence_radius          8 %km
@@ -66,7 +66,7 @@ rr_line_width           1
 %
 % image colour bar
 %
-colorbar_label          Frequency
+colorbar_label          Total.Count
 %
 % image streamliners
 %
