--- a/rwx_climate/etc/map.50.config
+++ b/rwx_climate/etc/map.50.config
@@ -10,10 +10,10 @@
 fig_w                   700
 fig_h                   700
 %
-map_N_lat               -25.6
-map_S_lat               -29.5
-map_E_lon               154.6   
-map_W_lon               150.5
+map_N_lat               -26.71
+map_S_lat               -28.5
+map_E_lon               153.6   
+map_W_lon               151.54
 %  
 lat_label_int           1
 lon_label_int           1
@@ -42,12 +42,14 @@ topo_linewidth          1
 topo_linecolor          [0.3,0.3,0.3]
 %
 draw_cities             1
-cities_names            {'Brisbane__','Archerfield__'}
-cities_lat              [-27.46,-27.56]
-cities_lon              [153.02,153.00]
-cities_horz_align       {'right','right'}
-cities_vert_align       {'top','top'}
-cities_fontsize         [14,14]
+cities_names            {'Brisbane','Esk','Boonah'}
+cities_lat              [-27.46,-27.25,-28]
+cities_lon              [153.02,152.42,152.7]
+cities_horz_align       {'right','right','right'}
+cities_vert_align       {'top','top','top'}
+cities_fontsize         [10,10,10]
+cities_marksize         [3,3,3]
+
 %
 draw_silence            1
 silence_radius          8 %km
@@ -65,11 +67,11 @@ rr_line_width           1
 %
 % image colour bar
 %
-colorbar_label         Frequency
+colorbar_label          Total.Count
 %
 % image streamliners
 %
-draw_streamliners       1
+draw_streamliners       0
 stream_linewith         1.5
 stream_linecolor        [0.6,0.6,0.6]
 %
@@ -77,3 +79,5 @@ stream_linecolor        [0.6,0.6,0.6]
 %
 % kml options
 %
+img_rescale             5
+kml_transparent_flag    1
