--- a/rwx_climate/etc/map.49.config
+++ b/rwx_climate/etc/map.49.config
@@ -10,10 +10,10 @@
 fig_w                   700
 fig_h                   700
 %
-map_N_lat               -36.9
-map_S_lat               -38.8
-map_E_lon               145.9
-map_W_lon               143.6
+map_N_lat               -35.1
+map_S_lat               -36.9
+map_E_lon               147.2
+map_W_lon               144.9
 %  
 lat_label_int           1
 lon_label_int           1
@@ -42,13 +42,13 @@ topo_linewidth          1
 topo_linecolor          [0.3,0.3,0.3]
 %
 draw_cities             1
-cities_names            {'Melbourne','Ballarat','Seymour','Geelong','Mt.Macedon'}
-cities_lat              [-37.813,-37.55,-37,-38.15,-37.383]
-cities_lon              [144.963,143.85,145.15,144.35,144.576]
-cities_horz_align       {'right','left','right','right','left'}
-cities_vert_align       {'top','top','top','top','top'}
-cities_fontsize         [10,10,10,10,10]
-cities_marksize         [3,3,3,3,3]
+cities_names            {'Albury','Jerilderie','Shepparton'}
+cities_lat              [-36.07,-35.36,-36.39]
+cities_lon              [146.91,145.74,145.41]
+cities_horz_align       {'left','left','left'}
+cities_vert_align       {'top','top','top'}
+cities_fontsize         [10,10,10]
+cities_marksize         [3,3,3]
 %
 draw_silence            1
 silence_radius          8 %km
@@ -66,7 +66,7 @@ rr_line_width           1
 %
 % image colour bar
 %
-colorbar_label          total
+colorbar_label          Total.Count
 %
 % image streamliners
 %
