--- a/rwx_climate/etc/map.53.config
+++ b/rwx_climate/etc/map.53.config
@@ -5,15 +5,15 @@
 % Fugro ROAMES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% image map layout config
+% image layout config
 %
 fig_w                   700
 fig_h                   700
 %
-map_N_lat               -32.8
-map_S_lat               -35
-map_E_lon               152.3 
-map_W_lon               150
+map_N_lat               -28.4
+map_S_lat               -30.4
+map_E_lon               150.9
+map_W_lon               148.8
 %  
 lat_label_int           1
 lon_label_int           1
@@ -34,7 +34,7 @@ state_id                1
 %
 draw_topo               1
 topo_ffn                /run/media/meso/DATA/mapping/AUS_gtopo30
-topo_resample           3
+topo_resample           1
 topo_min                200
 topo_step               200
 topo_max                1000
@@ -42,13 +42,13 @@ topo_linewidth          1
 topo_linecolor          [0.3,0.3,0.3]
 %
 draw_cities             1
-cities_names            {'Sydney','Wollongong'}
-cities_lat              [-33.865,-34.433]
-cities_lon              [151.209,150.883]
-cities_horz_align       {'left','left'}
-cities_vert_align       {'top','top'}
-cities_fontsize         [14,14]
-cities_marksize         [5,5]
+cities_names            {'Goondiwindi','Moree','Narrabri'}
+cities_lat              [-28.55,-29.47,-30.34]
+cities_lon              [150.31,149.86,149.78]
+cities_horz_align       {'left','left','left'}
+cities_vert_align       {'top','top','top'}
+cities_fontsize         [10,10,10]
+cities_marksize         [3,3,3]
 %
 draw_silence            1
 silence_radius          8 %km
@@ -66,11 +66,11 @@ rr_line_width           1
 %
 % image colour bar
 %
-colorbar_label          Frequency
+colorbar_label          Total.Count
 %
 % image streamliners
 %
-draw_streamliners       1
+draw_streamliners       0
 stream_linewith         1.5
 stream_linecolor        [0.6,0.6,0.6]
 %
@@ -78,3 +78,5 @@ stream_linecolor        [0.6,0.6,0.6]
 %
 % kml options
 %
+img_rescale             5
+kml_transparent_flag    1
