--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -7,7 +7,7 @@
 %
 % Site
 %
-radar_id       30                                              %radar id for climate analysis
+radar_id_list  30                                              %radar id for climate analysis. Set to all to use all sync'ed radar in local path
 transform_new  0                                               %flag to force transform regeneration
 %
 % Temporal
