removed odimh5 ddb table and added s3 listing function to replace functionality

--- a/etc/global.config
+++ b/etc/global.config
@@ -73,9 +73,12 @@ ddb_dateid_tfmt       ddmmyyyy                   %ddb date_id format for storm o
 %GLOBAL SCALING FACTOR
 r_scale               10                        %number to divide radar data objects (dbz,mesh,vel,etc)by before rounding
 %dynamodb table name
-odimh5_ddb_table      weather_odimh5_index
 storm_ddb_table       wxradar_stormh5_index
 eraint_ddb_table      wxradar_eraint_fzlvl
+%s3 buckets
+odimh5_s3_bucket      s3://roames-weather-odimh5/odimh5_archive/
+stormh5_s3_bucket     s3://roames-weather-stormh5/stormh5_archive/
+%
 clean_stormobj_index  0                         %checks stormobj_index for sort_ids and removed these entries
 %pushover
 pushover_flag         1
