--- a/opt/qc_odimh5/etc/qc.config
+++ b/opt/qc_odimh5/etc/qc.config
@@ -2,9 +2,10 @@
 %
 %
 year_start                1997
-year_stop                 2016
-radar_id                  50
-min_vol_size              10000 %bytes
+year_stop                 2017
+radar_id                  [1,2,3,4,5,6,7,8,9,10]
+empty_vol_size            5000 %bytes, 5kB
+thresh_vol_size           100000 %bytes, 100kB
 s3_odimh5_root            s3://roames-weather-odimh5/odimh5_archive/
 s3_bucket                 s3://roames-weather-odimh5/
 %
