sync now updates rather than replace ddb data in database.csv

--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -7,7 +7,7 @@
 %
 % Site
 %
-radar_id_list  30                                              %radar id for climate analysis. Set to all to use all sync'ed radar in local path
+radar_id_list  23                                              %radar id for climate analysis. Set to 'all' to use radar_id of all folders in archive path
 transform_new  0                                               %flag to force transform regeneration
 %
 % Temporal
@@ -19,13 +19,16 @@ time_max       23:59                                           %oldest time in e
 month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers (vec)
 date_list_flag 0                                               %flag to use date_list (flag)
 date_list_var  target_days                                     %date_list variable name (str)
-rainyr_flag    0                                               %normalise by number of rain years (flag)
+rainyr_flag    1                                               %normalise by number of rain years (flag)
 rain_yr_start  6                                               %rain year starting month (month number)
 %
 % Spatial
 %
 centroid_grid  0.1											   %grid size for centroid accumulation (degrees)
 data_range     250                                             %filter distance from radar to storm centroid (km)
+fixed_caxis    1
+caxis_min      0.0
+caxis_max      0.5
 %
 % Data processing
 %
