--- a/rwx_climate/etc/map/map.23.config
+++ b/rwx_climate/etc/map/map.23.config
@@ -12,7 +12,7 @@ fig_h                   700
 %
 map_N_lat               -22.9
 map_S_lat               -24.75
-map_E_lon               152.3   
+map_E_lon               152.3
 map_W_lon               150.3
 %  
 lat_label_int           1
@@ -42,9 +42,9 @@ topo_linewidth          1
 topo_linecolor          [0.3,0.3,0.3]
 %
 draw_cities             1
-cities_names            {'Yeppoon','Rocky','1770','Biloela}
+cities_names            {'Yeppoon','Rocky','1770','Biloela'}
 cities_lat              [-23.14,-23.4,-24.18,-24.41]
-cities_lon              [150.74,150.5,151.9,150,52]
+cities_lon              [150.74,150.5,151.9,150.52]
 cities_horz_align       {'right','right','right','right'}
 cities_vert_align       {'top','top','top','top'}
 cities_fontsize         [10,10,10,10]
