--- a/rwx_climate/etc/sync.config
+++ b/rwx_climate/etc/sync.config
@@ -3,10 +3,11 @@
 %sync_database.m config file
 %
 %---------------------------------------------------------
-radar_id      23                                              %radar id for database sync
+radar_id_list 02                                              %radar id list for database sync, use 'all' to use site_info.txt list
 storm_s3      s3://roames-weather-stormh5/stormh5_archive/    %s3 path to stormh5 data
 storm_ddb     wxradar_stormh5_index                           %ddb name for storm cell data
 db_root       /run/media/meso/data/rwx_clim_archive/          %local path to climate database root
 ddb_fields    29                                              %number of fields in ddb (QC)
-resync_h5     1                                               %force resync of stormh5
+resync_h5     1                                               %resync h5 
+rebuild_ddb   0                                               %if set to '1', delete csv before ddb transfer
 
