finished climate change list

--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -7,7 +7,7 @@
 %
 % Site
 %
-radar_id_list  23                                              %radar id for climate analysis. Set to 'all' to use radar_id of all folders in archive path
+radar_id_list  [2,3,4,8,23,28,30,40,46,49,50,53]            %radar id for climate analysis. Set to 'all' to use radar_id of all folders in archive path
 transform_new  0                                               %flag to force transform regeneration
 %
 % Temporal
@@ -25,10 +25,11 @@ rain_yr_start  6                                               %rain year starti
 % Spatial
 %
 centroid_grid  0.1											   %grid size for centroid accumulation (degrees)
-data_range     250                                             %filter distance from radar to storm centroid (km)
-fixed_caxis    1
-caxis_min      0.0
-caxis_max      0.5
+range_flag     1                                               %flag to apply range mask                                       
+data_range     150                                             %filter distance from radar(km)
+fixed_caxis    1                                               %fixed caxis flag for MERGED DENSITY ONLY
+caxis_min      0.0                                             %fixed caxis min value for MERGED DENSITY ONLY
+caxis_max      0.8                                             %fixed caxis max value for MERGED DENSITY ONLY
 %
 % Data processing
 %
@@ -40,8 +41,65 @@ ci_flag        0                                               %flag to only kee
 ce_flag        0                                               %flag to only keep centroids for ce events
 ce_diff        8                                               %different between tn1 and tn cells for ce event (data units)
 %
+% Global Plot settings
+%
+% #colorbar
+colorbar_label Annual.Frequency                                %color bar label (. will be replaced with space)
+%
+%  #map config
+fig_w                   700
+fig_h                   700
+lat_label_int           1
+lon_label_int           1
+lat_label_rnd           0
+lon_label_rnd           0
+lat_grid_res            0.5
+lon_grid_res            0.5
+label_fontsize          10
+%
+% # topo
+draw_topo               1
+topo_resample           1
+topo_min                200
+topo_step               200
+topo_max                2000
+topo_linewidth          1
+topo_linecolor          [0.3,0.3,0.3]
+%
+% #silence
+draw_silence            1
+silence_radius          8 %km
+silence_face_color      [0.5,0.5,0.5]
+silence_edge_color      [0.5,0.5,0.5]
+silence_line_width      2
+%
+% #coastlines
+draw_coast              1
+%
+% #site marker
+draw_site               1
+site_marker_size        6
+%
+% #range rings
+draw_range_rings        1
+range_ring_radius       [50,100] %km
+rr_edge_color           [0,0,0]
+rr_line_width           1
+%
+% #streamliners
+draw_streamliners       0
+stream_linewith         1.5
+stream_linecolor        [0.6,0.6,0.6]
+%
+% #kml
+img_rescale             5
+kml_transparent_flag    1
+%
 % Paths
 %
 db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root /run/media/meso/data/rwx_clim_archive/
 date_list_ffn  data/sb_data/arch_sb_days.mat                   %second date list to filter primary (must contain matlab dates rounded)
 out_root       /home/meso/rwx_climate/                         %output path for climate products
+old_root       /home/meso/rwx_climate/OLD/                     %output path for old climate products
+coast_ffn      /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
+topo_ffn       /run/media/meso/DATA/mapping/AUS_gtopo30
