--- a/rwx_climate/etc/map/map.40.config
+++ b/rwx_climate/etc/map/map.40.config
@@ -5,22 +5,22 @@
 % Fugro ROAMES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% image layout config
+% image map layout config
 %
-map_N_lat               -33.3
-map_S_lat               -35.1
-map_E_lon               143.2
-map_W_lon               141.0
+map_N_lat               -34.77
+map_S_lat               -36.57
+map_E_lon               150.62
+map_W_lon               148.41
 %  
 % image layers
 %
-state_id                2
+state_id                [1,8]
 %
 draw_cities             1
-cities_names            {'Mildura','Lake.Victoria','Robinvale'}
-cities_lat              [-34.2,-33.98,-34.6]
-cities_lon              [142.16,141.27,142.78]
-cities_horz_align       {'right','left','right'}
+cities_names            {'Canberra','Cooma','Moruya'}
+cities_lat              [-35.3,-36.24,-35.92]
+cities_lon              [149.15,149.13,150.1]
+cities_horz_align       {'left','left','left'}
 cities_vert_align       {'top','top','top'}
 cities_fontsize         [10,10,10]
 cities_marksize         [3,3,3]
