--- a/rwx_climate/etc/sync.config
+++ b/rwx_climate/etc/sync.config
@@ -3,7 +3,7 @@
 %sync_database.m config file
 %
 %---------------------------------------------------------
-radar_id_list 02                                              %radar id list for database sync, use 'all' to use site_info.txt list
+radar_id_list [2,3,4,8,23,28,30,40,46,49,50,53,71]            %radar id list for database sync, use 'all' to use site_info.txt list
 storm_s3      s3://roames-weather-stormh5/stormh5_archive/    %s3 path to stormh5 data
 storm_ddb     wxradar_stormh5_index                           %ddb name for storm cell data
 db_root       /run/media/meso/data/rwx_clim_archive/          %local path to climate database root
