--- a/rwx_climate/etc/map/map.28.config
+++ b/rwx_climate/etc/map/map.28.config
@@ -7,39 +7,14 @@
 %
 % image layout config
 %
-fig_w                   700
-fig_h                   700
-%
 map_N_lat               -28.7
 map_S_lat               -30.5
 map_E_lon               154.0
 map_W_lon               151.9
-%  
-lat_label_int           1
-lon_label_int           1
-%
-lat_label_rnd           0
-lon_label_rnd           0
-%
-lat_grid_res            0.5
-lon_grid_res            0.5
-%
-label_fontsize          10
 %
 % image layers
 %
-draw_coast              1
-coast_ffn               /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
-state_id                1
-%
-draw_topo               1
-topo_ffn                /run/media/meso/DATA/mapping/AUS_gtopo30
-topo_resample           1
-topo_min                200
-topo_step               200
-topo_max                1000
-topo_linewidth          1
-topo_linecolor          [0.3,0.3,0.3]
+state_id                [1,3]
 %
 draw_cities             1
 cities_names            {'Casino','Yamba','Coffs.Harbour','Tenterfield'}
@@ -49,34 +24,4 @@ cities_horz_align       {'right','left','left','left'}
 cities_vert_align       {'top','top','top','top'}
 cities_fontsize         [10,10,10,10]
 cities_marksize         [3,3,3,3]
-%
-draw_silence            1
-silence_radius          8 %km
-silence_face_color      [0.5,0.5,0.5]
-silence_edge_color      [0,0,0]
-silence_line_width      1
-%
-draw_site               1
-site_marker_size        6
-%
-draw_range_rings        1
-range_ring_radius       [50,100] %km
-rr_edge_color           [0,0,0]
-rr_line_width           1
-%
-% image colour bar
-%
-colorbar_label          Total.Count
-%
-% image streamliners
-%
-draw_streamliners       0
-stream_linewith         1.5
-stream_linecolor        [0.6,0.6,0.6]
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% kml options
-%
-img_rescale             5
-kml_transparent_flag    1
+
