updated read_sites to include a function for catching old moved sites, applied changes throughout code base

--- a/etc/global.config
+++ b/etc/global.config
@@ -1,5 +1,10 @@
 %WeatherVis Config File
 %
+% SITE LISTS
+site_info_fn           site_info.txt
+site_info_old_fn       site_info_old.txt
+
+%
 %GRID OPTIONS
 min_lat                 -45.8     %southern lat of national domain
 max_lat                 -9        %northern lat of national domain
