--- a/opt/qc_odimh5/etc/qc.config
+++ b/opt/qc_odimh5/etc/qc.config
@@ -3,9 +3,9 @@
 %
 year_start                2015
 year_stop                 2015
-radar_id                  [37]
-empty_vol_size            5000 %bytes, 5kB
-thresh_vol_size           100000 %bytes, 100kB
+radar_id_list             [37]              %can use 'all' for a list of 1:99
+empty_vol_size            5000              %bytes, 5kB
+thresh_vol_size           100000            %bytes, 100kB
 s3_odimh5_root            s3://roames-weather-odimh5/odimh5_archive/
 s3_bucket                 s3://roames-weather-odimh5/
 %
