--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -12,8 +12,8 @@ transform_new  0                                               %flag to force tr
 %
 % Temporal
 %
-date_start     1999/01/01                                      %start date (yyyy-mm-dd)
-date_stop      2016/12/31                                      %end date (yyyy-mm-dd)
+date_start     1999_01_01                                      %start date (yyyy_mm_dd)
+date_stop      2016_12_31                                      %end date   (yyyy_mm_dd)
 time_min       00:00                                           %newest time in each dat to accept a cell (HH:MM)
 time_max       23:59                                           %oldest time in each day to accept a cell (HH:MM)
 month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers (vec)
