--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -12,14 +12,14 @@ realtime_offset  -2
 %
 %CLIMATOLOGY ANALYSIS DATES
 %
-hist_oldest      2015_10_27
+date_start      2015_10_27
 %yyyy_mm_dd : oldest time to process
-hist_newest      2015_10_27
+date_stop      2015_10_27
 %yyyy_mm_dd : newest time to process
 %
 %SITE
 %
-radar_id_list           66
+radar_id_list           19
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
