--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -8,7 +8,7 @@ s3_dest_root             s3://roames-weather-vis/kml_demo_northbrisbane2017/
 s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_demo_northbrisbane2017/
 %
 % REALTIME OPTIONS
-realtime_kml             0
+realtime_flag            0
 realtime_length          -2          %hours
 %
 % RESTART OPTIONS
@@ -24,13 +24,13 @@ download_path            /tmp/vis_h5_download/
 asset_data_fn            tmp/asset_data.mat
 %
 % HISTORICAL OPTIOS
-hist_oldest              2005-02-02T06:00:00
+date_start              2005-02-02T06:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-hist_newest              2005-02-02T12:00:00
+date_stop               2005-02-02T12:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           03
+radar_id_list           03        %'all' for all sites in site_info for realtime processing
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
