--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -7,7 +7,7 @@
 %
 % Site
 %
-radar_id_list  [40]            %radar id for climate analysis. Set to 'all' to use radar_id of all folders in archive path
+radar_id_list  [40]                                            %radar id for climate analysis. Set to 'all' to use radar_id of all folders in archive path
 transform_new  0                                               %flag to force transform regeneration
 %
 % Temporal
@@ -103,3 +103,5 @@ out_root       /home/meso/rwx_climate/                         %output path for 
 old_root       /home/meso/rwx_climate/OLD/                     %output path for old climate products
 coast_ffn      /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
 topo_ffn       /run/media/meso/DATA/mapping/AUS_gtopo30
+s3_path       s3://roames-weather-vis/kml_climate/    %s3 path to stormh5 data
+url_prefix    https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_climate/
