--- a/rwx_climate/etc/map/map.71.config
+++ b/rwx_climate/etc/map/map.71.config
@@ -7,20 +7,20 @@
 %
 % image map layout config
 %
-map_N_lat               -20.23
-map_S_lat               -22
-map_E_lon               150.2
-map_W_lon               148.26
+map_N_lat               -33.36
+map_S_lat               -35.17
+map_E_lon               152
+map_W_lon               149.8
 %
 % image layers
 %
-state_id                3
+state_id                1
 %
 draw_cities             1
-cities_names            {'Proserpine','Mackay','Sarina'}
-cities_lat              [-20.4,-21.15,-21.42]
-cities_lon              [148.6,149.19,149.22]
-cities_horz_align       {'right','right','right'}
+cities_names            {'Sydney','Wollongong','Norwa'}
+cities_lat              [-33.865,-34.433,-34.88]
+cities_lon              [151.209,150.883,150.62]
+cities_horz_align       {'left','left','left'}
 cities_vert_align       {'top','top','top'}
 cities_fontsize         [10,10,10]
 cities_marksize         [3,3,3]
