gfs now using eraint as backup

--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -1,7 +1,7 @@
 %PROCESS CONFIG FILE
 %WHAT: controls the input parameters of the wv_process module
 %
-realtime_flag    0
+realtime_flag    1
 %description: controls process mode:
 %Realtime:   uses staging index (.h5), realtime GFS forecast temp data and loops
 %Historical: extracts list from odimh5_ddb (.h5), uses ERA-Intrim data and does not loop
@@ -19,7 +19,7 @@ date_stop      2015_10_27
 %
 %SITE
 %
-radar_id_list           19
+radar_id_list           [50,66]
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
