--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -24,13 +24,13 @@ download_path            /tmp/vis_h5_download/
 asset_data_fn            tmp/asset_data.mat
 %
 % HISTORICAL OPTIOS
-date_start              2005-02-02T06:00:00
+date_start              2017-03-30T08:30:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-date_stop               2005-02-02T12:00:00
+date_stop               2017-03-30T10:30:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           03        %'all' for all sites in site_info for realtime processing
+radar_id_list           66        %'all' for all sites in site_info for realtime processing
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
@@ -67,7 +67,7 @@ min_track_cells       3                 %minimum of unique cells for kml track g
 %
 % KML LAYER OPTIONS
 %                      1 2 3 4 5 6 7 8 9 10 11
-options               [1,0,0,0,1,1,1,0,1,1,11]
+options               [1,0,0,0,0,0,0,0,0,0,1]
 %description (T/F):
 %Entry (1)  PPI refl kml layer
 %Entry (2)  PPI vel kml layer
@@ -82,12 +82,12 @@ options               [1,0,0,0,1,1,1,0,1,1,11]
 %Entry (11) single doppler wind speed
 %
 % SingleDop Products (sweep is determined by ppi_sweep)
-sd_r_list         66                    %radar id list for sd
-sd_l              3                     %sd decorrelation length (km)
+sd_l              5                     %sd decorrelation length (km)
 sd_min_rng        5                     %sd min range (km)
-sd_max_rng        60                    %sd max range (km)
-sd_thin_i         2                     %sd thin in i dim
-sd_thin_j         12                    %sd thin in j dim
+sd_max_rng        100                    %sd max range (km)
+sd_thin_azi       2                     %sd thin in azi dim
+sd_thin_rng       12                    %sd thin in rng dim
+sd_plt_thin       10                    %thin integer for vectors 
 %
 % ERROR NOTIFICATION
 %
