corrected vis radar kml and singledop tweaks

--- a/etc/global.config
+++ b/etc/global.config
@@ -2,7 +2,9 @@
 %
 % SITE LISTS
 site_info_fn           site_info.txt
-site_info_old_fn       site_info_old.txt
+site_info_moved_fn     site_info_moved.txt
+site_info_ignore_fn    site_info_ignore.txt
+
 %
 %GRID OPTIONS
 min_lat                 -45.8     %southern lat of national domain
