--- a/rwx_vis/etc/Copy_of_vis.config
+++ b/rwx_vis/etc/Copy_of_vis.config
@@ -3,12 +3,12 @@
 %
 % DESTINATION OPTIONS
 local_dest_flag          1
-local_dest_root          /home/meso/roames_weather_kml/kml_20161205/
+local_dest_root          /home/meso/roames_weather_kml/kml_realtime_testing/
 s3_dest_root             s3://roames-weather-vis/kml_realtime/
 s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_realtime/
 %
 % REALTIME OPTIONS
-realtime_flag            0
+realtime_flag            1
 realtime_length          -2          %hours
 %
 % RESTART OPTIONS
@@ -24,13 +24,13 @@ download_path            /tmp/vis_h5_download/
 asset_data_fn            tmp/asset_data.mat
 %
 % HISTORICAL OPTIOS
-date_start               2016-12-05T06:30:00
+date_start               2017-02-18T05:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-date_stop                2016-12-05T07:30:00
+date_stop                2017-02-18T06:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           99       %'all' for all sites in site_info for realtime processing
+radar_id_list           all       %'all' for all sites in site_info for realtime processing
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
@@ -67,7 +67,7 @@ min_track_cells       3                 %minimum of unique cells for kml track g
 %
 % KML LAYER OPTIONS
 %                      1 2 3 4 5 6 7 8 9 10 11
-options               [1,0,0,0,1,1,1,0,0,0,1]
+options               [1,0,0,0,1,1,1,0,1,1,1]
 %description (T/F):
 %Entry (1)  PPI refl kml layer
 %Entry (2)  PPI vel kml layer
@@ -84,10 +84,10 @@ options               [1,0,0,0,1,1,1,0,0,0,1]
 % SingleDop Products (sweep is determined by ppi_sweep)
 sd_l              5                     %sd decorrelation length (km)
 sd_min_rng        0                     %sd min range (km)
-sd_max_rng        50                    %sd max range (km)
-sd_thin_azi       6                     %sd thin in azi dim
+sd_max_rng        100                   %sd max range (km)
+sd_thin_azi       2                     %sd thin in azi dim
 sd_thin_rng       12                    %sd thin in rng dim
-sd_plt_thin       5                     %thin integer for vectors 
+sd_plt_thin       10                    %thin integer for vectors 
 %
 % ERROR NOTIFICATION
 %
