xpol fixes and batch vis ddb download

--- a/etc/global.config
+++ b/etc/global.config
@@ -11,8 +11,8 @@ min_lat                 -45.8     %southern lat of national domain
 max_lat                 -9        %northern lat of national domain
 min_lon                 111       %western lon of national domain
 max_lon                 156.3     %eastern lon of national domain
-h_grid                  0.01      %horizontal grid size (deg)
-v_grid                  0.5       %vertical grid size (km)
+bom_h_grid              0.01      %horizontal grid size (deg)
+bom_v_grid              0.5       %vertical grid size (km)
 v_tops                  20        %horizontal grid tops
 radar_mask_rng          300       %km from radar
 %
@@ -21,7 +21,7 @@ earth_rad               6371      %km
 ke                      1.3333333 %earth model
 %
 %signficant refl check
-sig_refl_ppi_no         2         %ppi number for sig refl check
+sig_refl_ppi_no         8         %ppi number for sig refl check
 %
 %mobile radar grid config
 mobile_v_grid           0.25      %vertical grid res (km)
@@ -30,9 +30,6 @@ mobile_h_grid           0.25      %horz grid res (km)
 mobile_h_rng            40        %horz grid range (km)
 mobile_max_elv          40        %max elevation angle
 mobile_id               99
-mobile_lat              -27.981611 
-mobile_lon              151.194401
-mobile_alt              0.430     %km
 %
 %DATA OPTIONS
 min_dbzh                -32        %min negative of dbz values to set to transparent
@@ -42,11 +39,11 @@ max_vradh               70         %max of vel values
 min_n_groups            4          %minimum number of groups in a h5 file to contiune pass QA
 %
 %IDENTIFCATION OPTIONS
-ewt_min_hlevel         2           %Min level search criteria DEFAULT 5
+ewt_min_hlevel         5           %Min level search criteria DEFAULT 5
 ewt_a                  35          %Quantisation refl lower bound (dbz)
 ewt_b                  60          %Quantisation refl upper bound (dbz)
 ewt_del                1           %Quantisation refl scaling 
-ewt_saliency           100         %min areal extent threshold (km) DEFAULT 20, was 15
+ewt_saliency           5          %min areal extent threshold (km) DEFAULT 20
 ewt_kernel_size        3           %smoothing kernel (pixels)
 ewt_max_depth          10          %maximum hlevel depth search (units of Q) DEFAULT 10
 ewt_refl_h             4           %level to extract refl data from vol (h index)
@@ -81,6 +78,7 @@ r_scale               10                        %number to divide radar data obj
 %dynamodb table name
 storm_ddb_table       wxradar_stormh5_index
 eraint_ddb_table      wxradar_eraint_fzlvl
+stormddb_fields       29                        %number of stormddb fields (fixed)  
 %s3 buckets
 odimh5_s3_bucket      s3://roames-weather-odimh5/odimh5_archive/
 stormh5_s3_bucket     s3://roames-weather-stormh5/stormh5_archive/
