--- a/rwx_process/etc/process.config
+++ b/rwx_process/etc/process.config
@@ -19,7 +19,7 @@ date_stop      2015_10_27
 %
 %SITE
 %
-radar_id_list           [50,66]
+radar_id_list           all
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
