updated etc and docs and readme

--- a/etc/global.config
+++ b/etc/global.config
@@ -1,44 +1,72 @@
-%WeatherVis Config File
 %
+% ROAMES WEATHER GLOBAL CONFIG FILE
+%
+% Contains variables which are shared across the roames weather platform
+%
+%%%%%%%%%%%%%%%%%%%%%%
 % SITE LISTS
-site_info_fn           site_info.txt
-site_info_moved_fn     site_info_moved.txt
-site_info_ignore_fn    site_info_ignore.txt
-
+%%%%%%%%%%%%%%%%%%%%%%
+site_info_fn           site_info.txt            %contains the full site list
+site_info_moved_fn     site_info_moved.txt      %contains sites which have moved or replaced creating a conflicting id
+site_info_ignore_fn    site_info_ignore.txt     %contains sites to ignore (turned off or reduntant)
 %
-%GRID OPTIONS
-min_lat                 -45.8     %southern lat of national domain
-max_lat                 -9        %northern lat of national domain
-min_lon                 111       %western lon of national domain
-max_lon                 156.3     %eastern lon of national domain
-bom_h_grid              0.01      %horizontal grid size (deg)
-bom_v_grid              0.5       %vertical grid size (km)
-v_tops                  20        %horizontal grid tops
-radar_mask_rng          300       %km from radar
+%%%%%%%%%%%%%%%%%%%%%%
+% AWS
+%%%%%%%%%%%%%%%%%%%%%%
+%SNS arn
+sns_odimh5_prep       arn:aws:sns:ap-southeast-2:979317741916:weather_realtime_odimh5_prep
+sns_odimh5_process    arn:aws:sns:ap-southeast-2:979317741916:weather_realtime_odimh5_process
+%SQS url
+sqs_odimh5_prep       https://sqs.ap-southeast-2.amazonaws.com/979317741916/joshuasoderholm_weather_realtime_odimh5_prep
+sqs_odimh5_process    https://sqs.ap-southeast-2.amazonaws.com/979317741916/joshuasoderholm_weather_realtime_odimh5_process
+%dynamodb table name
+storm_ddb_table       wxradar_stormh5_index
+eraint_ddb_table      wxradar_eraint_fzlvl
+stormddb_fields       29                        %number of stormddb fields (fixed)  
+%s3 buckets
+odimh5_s3_bucket      s3://roames-weather-odimh5/odimh5_archive/
+stormh5_s3_bucket     s3://roames-weather-stormh5/stormh5_archive/
 %
-%transform constants
-earth_rad               6371      %km
-ke                      1.3333333 %earth model
-%
-%signficant refl check
-sig_refl_ppi_no         8         %ppi number for sig refl check
+%%%%%%%%%%%%%%%%%%%%%%
+% GRID CONFIG
+%%%%%%%%%%%%%%%%%%%%%%
+%bom radar grid config
+min_lat                 -45.8      %southern lat of national domain
+max_lat                 -9         %northern lat of national domain
+min_lon                 111        %western lon of national domain
+max_lon                 156.3      %eastern lon of national domain
+bom_h_grid              0.01       %horizontal grid size (deg)
+bom_v_grid              0.5        %vertical grid size (km)
+v_tops                  20         %horizontal grid tops
+radar_mask_rng          300        %km from radar
 %
 %mobile radar grid config
-mobile_v_grid           0.25      %vertical grid res (km)
-mobile_v_rng            15        %vertical grid range (km)
-mobile_h_grid           0.25      %horz grid res (km)
-mobile_h_rng            40        %horz grid range (km)
-mobile_max_elv          40        %max elevation angle
-mobile_id               99
+mobile_v_grid           0.25       %vertical grid res (km)
+mobile_v_rng            15         %vertical grid range (km)
+mobile_h_grid           0.25       %horz grid res (km)
+mobile_h_rng            40         %horz grid range (km)
+mobile_max_elv          40         %max elevation angle
+mobile_id               99         %mobile radar id in site list
 %
-%DATA OPTIONS
+%transform constants
+earth_rad               6371       %km
+ke                      1.3333333  %earth model
+%
+%%%%%%%%%%%%%%%%%%%%%%
+% DATA OPTIONS
+%%%%%%%%%%%%%%%%%%%%%%
 min_dbzh                -32        %min negative of dbz values to set to transparent
 max_dbzh                96         %max of dbz values (128-32)
 min_vradh               -71        %min vel value to set to transparent
 max_vradh               70         %max of vel values
 min_n_groups            4          %minimum number of groups in a h5 file to contiune pass QA
+r_scale                 10         %number to divide radar data objects (dbz,mesh,vel,etc)by before rounding
+clean_stormobj_index    0          %checks stormobj_index for sort_ids and removed these entries
 %
-%IDENTIFCATION OPTIONS
+%%%%%%%%%%%%%%%%%%%%%%
+% IDENTIFCATION OPTIONS
+%%%%%%%%%%%%%%%%%%%%%%
+sig_refl_ppi_no        2           %ppi number for sig refl check
 ewt_min_hlevel         3           %Min level search criteria DEFAULT 5
 ewt_a                  35          %Quantisation refl lower bound (dbz)
 ewt_b                  60          %Quantisation refl upper bound (dbz)
@@ -51,47 +79,31 @@ tops_thresh            18          %target dbz value for calculating tops
 severe_dbz_thresh      50          %target dbz value for calculating severe dbz surface height
 vil_upper_limit        55          %upper limit for vil calculatations (dBZ), negates hail spike effects
 %
-%TRACKING OPTIONS
-min_track_len         2           %minimum track history used for projecting centroid in wdss_tracking
-min_other_track_cells 3           %minimum number of other tracked cells which can be used to generate a proj track for a cell with no history
-max_track_len         8           %maximum track history used for projecting centroid in wdss_tracking
-max_storm_speed       75          %maximum speed of a storm, used to check tracking cell search radius (km/h)
-max_search_distance   13.5        %max search radius for cell tracking (km)
-azi_diff              75          %maximum allowable difference between the proj_azi and the tracked azi (deg)
-other_track_dist      150         %for case using other tracks to predict path of new cell, sets the maximum search radius for other tracks (km)
+%%%%%%%%%%%%%%%%%%%%%%
+% TRACKING OPTIONS
+%%%%%%%%%%%%%%%%%%%%%%
+min_track_len          2           %minimum track history used for projecting centroid in wdss_tracking
+min_other_track_cells  3           %minimum number of other tracked cells which can be used to generate a proj track for a cell with no history
+max_track_len          8           %maximum track history used for projecting centroid in wdss_tracking
+max_storm_speed        75          %maximum speed of a storm, used to check tracking cell search radius (km/h)
+max_search_distance    13.5        %max search radius for cell tracking (km)
+azi_diff               75          %maximum allowable difference between the proj_azi and the tracked azi (deg)
+other_track_dist       150         %for case using other tracks to predict path of new cell, sets the maximum search radius for other tracks (km)
 %
-%NOWCASTING VIS OPTIONS
-fcst_step             5           %length of steps in minutes
-n_fcst_steps          6           %number of forecast steps
-min_fcst_cells        3           %minimum of unique cells for forecast generation
-max_hist_cells        4           %maximum number of previous timesteps from history to use for forecast generation
-radar_mask_time       11          %minutes either side of a PPI scan to search for overlapping radars
+%%%%%%%%%%%%%%%%%%%%%%
+% NOWCASTING OPTIONS
+%%%%%%%%%%%%%%%%%%%%%%
+fcst_step              5           %length of steps in minutes
+n_fcst_steps           6           %number of forecast steps
+min_fcst_cells         3           %minimum of unique cells for forecast generation
+max_hist_cells         4           %maximum number of previous timesteps from history to use for forecast generation
+radar_mask_time        11          %minutes either side of a PPI scan to search for overlapping radars
 %
+%%%%%%%%%%%%%%%%%%%%%%
 %DATE FORMAT OPTIONS
+%%%%%%%%%%%%%%%%%%%%%%
 r_tfmt                yyyymmdd_HHMMSS            %s3 database date format
 ddb_tfmt              yyyy-mm-ddTHH:MM:SS        %ddb date format
 ge_tfmt               yyyy-mm-ddTHH:MM:SSZ       %Google's date format
 ddb_dateid_tfmt       ddmmyyyy                   %ddb date_id format for storm objects
 %
-%GLOBAL SCALING FACTOR
-r_scale               10                        %number to divide radar data objects (dbz,mesh,vel,etc)by before rounding
-%
-%dynamodb table name
-storm_ddb_table       wxradar_stormh5_index
-eraint_ddb_table      wxradar_eraint_fzlvl
-stormddb_fields       29                        %number of stormddb fields (fixed)  
-%s3 buckets
-odimh5_s3_bucket      s3://roames-weather-odimh5/odimh5_archive/
-stormh5_s3_bucket     s3://roames-weather-stormh5/stormh5_archive/
-%
-clean_stormobj_index  0                         %checks stormobj_index for sort_ids and removed these entries
-%
-%pushover
-pushover_flag         1
-%
-%SNS arn
-sns_odimh5_prep       arn:aws:sns:ap-southeast-2:979317741916:weather_realtime_odimh5_prep
-sns_odimh5_process    arn:aws:sns:ap-southeast-2:979317741916:weather_realtime_odimh5_process
-%SQS url
-sqs_odimh5_prep       https://sqs.ap-southeast-2.amazonaws.com/979317741916/joshuasoderholm_weather_realtime_odimh5_prep
-sqs_odimh5_process    https://sqs.ap-southeast-2.amazonaws.com/979317741916/joshuasoderholm_weather_realtime_odimh5_process
