added mask priority into global

--- a/etc/global.config
+++ b/etc/global.config
@@ -9,6 +9,8 @@
 site_info_fn           site_info.txt            %contains the full site list
 site_info_moved_fn     site_info_moved.txt      %contains sites which have moved or replaced creating a conflicting id
 site_info_ignore_fn    site_info_ignore.txt     %contains sites to ignore (turned off or reduntant)
+priority_fn            mask_priority_radars.txt %contains list of radars with a higher priority for process_radar_mask.m
+
 %
 %%%%%%%%%%%%%%%%%%%%%%
 % AWS
