--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -50,7 +50,6 @@ max_ge_alt            20000       %upper limit for ge alt in networklinks
 %KML OPTIONS
 coverage_range        200               %coverage rings distance in km
 max_vis_trck_length   20                %length of storm track colormap
-xsec_alt              [3000,6000]       %xsection altitude in m
 ppi_sweep             3                 %starting from 1st sweep = 1
 ppi_dbzh_mask         10                %gatemask which is applied to reflectivity and velocity PPI images in dBZ
 ppi_resize_scale      3                 %resize factor for ppi images
@@ -66,29 +65,35 @@ outer_alpha           0.5               %alpha for outer collada isosurface
 min_track_cells       3                 %minimum of unique cells for kml track generation (min 2)
 %
 % KML LAYER OPTIONS
-%                      1 2 3 4 5 6 7 8 9 10 11
-options               [1,0,0,0,1,1,0,0,1,0,1]
+%                      1 2 3 4 5 6 7 8 9
+options               [1,0,1,1,0,0,1,0,1]
 %description (T/F):
 %Entry (1)  PPI refl kml layer
 %Entry (2)  PPI vel kml layer
-%Entry (3)  Refl xsec kml object
-%Entry (4)  Vel xsec kml object
-%Entry (5)  inner isosurface kml object
-%Entry (6)  outer isosurface kml object
-%Entry (7)  storm stats balloon object
-%Entry (8)  track
-%Entry (9)  swath
-%Entry (10) nowcast
-%Entry (11) single doppler wind speed
+%Entry (3)  inner isosurface kml object
+%Entry (4)  outer isosurface kml object
+%Entry (5)  storm stats balloon object
+%Entry (6)  track
+%Entry (7)  swath
+%Entry (8) nowcast
+%Entry (9) single doppler wind speed
 %
 % SingleDop Products
+%
 sd_sweep          0
 sd_l              3                    %sd decorrelation length (km)
 sd_min_rng        7                    %sd min range (km)
 sd_max_rng        80                   %sd max range (km)
 sd_thin_azi       2                    %sd thin in azi dim
 sd_thin_rng       8                    %sd thin in rng dim
-sd_plt_thin       8                    %thin integer for vectors 
+sd_plt_thin       8                    %thin integer for vectors
+%
+% Impact maps
+%
+impact_radar_id   [8,19,66,72,73]
+impact_hrs        18
+impact_tmp_root   /tmp/wind_impact_maps/
+impact_out_root   s3://roames-weather-vis/impact_maps/
 %
 % ERROR NOTIFICATION
 %
